src/main/java/lexical/test/failing/02.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 1 | Caracter invalido: @ |
@

